[package]
name = "skia-abm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
grid = "0.16.0"
rand = "0.9.0"
rayon = "1.10.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
env_logger = "0.11.3"

